--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TetrisJS</title>
-    <meta property="og:title" content="TetrisJS" />
+    <title>JavaScript Tetris</title>
+    <meta property="og:title" content="JavaScript Tetris" />
     <meta name="description" content="Tetris game made with modern JavaScript." />
     <meta name="twitter:description" content="Tetris game made with modern Javascript." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@melcor76" />
+    <meta name="keywords" content="JavaScript, Tetris" />
+    <meta name="author" content="Michael Karén" />
     <meta
       property="og:image"
       content="https://focused-mestorf-930f82.netlify.com/assets/share-image.png"
@@ -17,22 +21,21 @@
   <body>
     <div class="grid">
       <div class="left-column">
-        <h2>Leaderboard</h2>
+        <h2>HIGH SCORES</h2>
         <ol id="highScores"></ol>
-        <h3>
-          Made by: Mayur Bhoi
-          <br>
-          Get it on Github
-        </h3>
       </div>
       <canvas id="board" class="game-board"></canvas>
       <div class="right-column">
         <div>
-          <h1>TetrisJS</h1>
-          <p>Current Score: <span id="score">0</span></p>
-          <p>Lines Cleared: <span id="lines">0</span></p>
-          <p>Current Level: <span id="level">0</span></p>
+          <h1>TETRIS</h1>
+          <p>Score: <span id="score">0</span></p>
+          <p>Lines: <span id="lines">0</span></p>
+          <p>Level: <span id="level">0</span></p>
           <canvas id="next" class="next"></canvas>
+        </div>
+        <div id="sound-div">
+          <span class="sound-item" id="sound-speaker"></span>
+          <span class="sound-item" id="sound-description"></span>
         </div>
         <button id="play-btn" onclick="play()" class="play-button">Play</button>
         <button id="pause-btn" onclick="pause()" class="play-button">Pause</button>
@@ -43,6 +46,5 @@
     <script type="text/javascript" src="board.js"></script>
     <script type="text/javascript" src="piece.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    
   </body>
 </html>
