--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:site" content="@melcor76" />
     <meta name="keywords" content="JavaScript, Tetris" />
     <meta name="author" content="Michael Karén" />
-    <base href="https://www.projects.mayurbhoi.com/projects/">
+    <base href="https://projects.mayurbhoi.com/projects/">
     <meta
       property="og:image"
       content="https://focused-mestorf-930f82.netlify.com/assets/share-image.png"
